testdata/baselines/reference/effect-v4/classSelfMismatch_schema.flows.txt
==== /.src/classSelfMismatch_schema.ts (8 flows) ====

=== Effect Flow ===
Kind: pipeline
Location: 4:38 - 6:3
Root: Schema.Class<ValidSchemaClass>("ValidSchemaClass")({\n  prop: Schema.String\n})
Path (3 nodes):
  [0] root {plain A=ExtendableClass<ValidSchemaClass, Struct<{ readonly prop: String; }>, {}>} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A={ prop: String; }} {\n  prop: Schema.String\n}
      ~> [call] -> [2]
  [2] pipeTransformation {plain A=ExtendableClass<ValidSchemaClass, Struct<{ readonly prop: String; }>, {}>} step 0: Schema.Class<ValidSchemaClass>("ValidSchemaClass")

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: plain
      result.A: ExtendableClass<ValidSchemaClass, Struct<{ readonly prop: String; }>, {}>
      result.E: 
      result.R: 
  [1] kind: pipeSubject
      label: {\n  prop: Schema.String\n}
      ordinal: 0
      result.kind: plain
      result.A: { prop: String; }
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Schema.Class<ValidSchemaClass>("ValidSchemaClass")
      ordinal: 0
      result.kind: plain
      result.A: ExtendableClass<ValidSchemaClass, Struct<{ readonly prop: String; }>, {}>
      result.E: 
      result.R: 
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 9:40 - 11:3
Root: Schema.Class<ValidSchemaClass>("InvalidSchemaClass")({\n  prop: Schema.String\n})
Path (3 nodes):
  [0] root {plain A=ExtendableClass<ValidSchemaClass, Struct<{ readonly prop: String; }>, {}>} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A={ prop: String; }} {\n  prop: Schema.String\n}
      ~> [call] -> [2]
  [2] pipeTransformation {plain A=ExtendableClass<ValidSchemaClass, Struct<{ readonly prop: String; }>, {}>} step 0: Schema.Class<ValidSchemaClass>("InvalidSchemaClass")

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: plain
      result.A: ExtendableClass<ValidSchemaClass, Struct<{ readonly prop: String; }>, {}>
      result.E: 
      result.R: 
  [1] kind: pipeSubject
      label: {\n  prop: Schema.String\n}
      ordinal: 0
      result.kind: plain
      result.A: { prop: String; }
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Schema.Class<ValidSchemaClass>("InvalidSchemaClass")
      ordinal: 0
      result.kind: plain
      result.A: ExtendableClass<ValidSchemaClass, Struct<{ readonly prop: String; }>, {}>
      result.E: 
      result.R: 
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 14:43 - 16:3
Root: Schema.Class<ValidErrorSchemaClass>("ValidErrorSchemaClass")({\n  prop: Schema.String\n})
Path (3 nodes):
  [0] root {plain A=ExtendableClass<ValidErrorSchemaClass, Struct<{ readonly prop: String; }>, {}>} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A={ prop: String; }} {\n  prop: Schema.String\n}
      ~> [call] -> [2]
  [2] pipeTransformation {plain A=ExtendableClass<ValidErrorSchemaClass, Struct<{ readonly prop: String; }>, {}>} step 0: Schema.Class<ValidErrorSchemaClass>("ValidErrorSchemaClass")

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: plain
      result.A: ExtendableClass<ValidErrorSchemaClass, Struct<{ readonly prop: String; }>, {}>
      result.E: 
      result.R: 
  [1] kind: pipeSubject
      label: {\n  prop: Schema.String\n}
      ordinal: 0
      result.kind: plain
      result.A: { prop: String; }
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Schema.Class<ValidErrorSchemaClass>("ValidErrorSchemaClass")
      ordinal: 0
      result.kind: plain
      result.A: ExtendableClass<ValidErrorSchemaClass, Struct<{ readonly prop: String; }>, {}>
      result.E: 
      result.R: 
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 19:45 - 21:3
Root: Schema.Class<ValidErrorSchemaClass>("InvalidErrorSchemaClass")({\n  prop: Schema.String\n})
Path (3 nodes):
  [0] root {plain A=ExtendableClass<ValidErrorSchemaClass, Struct<{ readonly prop: String; }>, {}>} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A={ prop: String; }} {\n  prop: Schema.String\n}
      ~> [call] -> [2]
  [2] pipeTransformation {plain A=ExtendableClass<ValidErrorSchemaClass, Struct<{ readonly prop: String; }>, {}>} step 0: Schema.Class<ValidErrorSchemaClass>("InvalidErrorSchemaClass")

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: plain
      result.A: ExtendableClass<ValidErrorSchemaClass, Struct<{ readonly prop: String; }>, {}>
      result.E: 
      result.R: 
  [1] kind: pipeSubject
      label: {\n  prop: Schema.String\n}
      ordinal: 0
      result.kind: plain
      result.A: { prop: String; }
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Schema.Class<ValidErrorSchemaClass>("InvalidErrorSchemaClass")
      ordinal: 0
      result.kind: plain
      result.A: ExtendableClass<ValidErrorSchemaClass, Struct<{ readonly prop: String; }>, {}>
      result.E: 
      result.R: 
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 24:10 - 28:5
Root: Schema.RequestClass<ValidSchemaTaggedRequest>("ValidSchemaTaggedRequest")({\n    payload: Schema.Struct({}),\n    success: Schema.Void,\n    error: Schema.Never\n  })
Path (3 nodes):
  [0] root {plain A=any} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A={ payload: Struct<{}>; success: Void; error: Never; }} {\n    payload: Schema.Struct({}),\n    success: Schema.Void,\n    error: Sch...
      ~> [call] -> [2]
  [2] pipeTransformation {plain A=any} step 0: Schema.RequestClass<ValidSchemaTaggedRequest>("ValidSchemaTaggedRequest")

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: plain
      result.A: any
      result.E: 
      result.R: 
  [1] kind: pipeSubject
      label: {\n    payload: Schema.Struct({}),\n    success: Schema.Void,\n    error: Sch...
      ordinal: 0
      result.kind: plain
      result.A: { payload: Struct<{}>; success: Void; error: Never; }
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Schema.RequestClass<ValidSchemaTaggedRequest>("ValidSchemaTaggedRequest")
      ordinal: 0
      result.kind: plain
      result.A: any
      result.E: 
      result.R: 
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 25:13 - 25:31
Root: Schema.Struct({})
Path (3 nodes):
  [0] root {plain A=Struct<{}>} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A={}} {}
      ~> [call] -> [2]
  [2] pipeTransformation {plain A=Struct<{}>} step 0: Schema.Struct

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: plain
      result.A: Struct<{}>
      result.E: 
      result.R: 
  [1] kind: pipeSubject
      label: {}
      ordinal: 0
      result.kind: plain
      result.A: {}
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Schema.Struct
      ordinal: 0
      result.kind: plain
      result.A: Struct<{}>
      result.E: 
      result.R: 
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 33:10 - 37:5
Root: Schema.RequestClass<ValidSchemaTaggedRequest>("InvalidSchemaTaggedRequest")({\n    payload: Schema.Struct({}),\n    success: Schema.Void,\n    error: Schema.Never\n  })
Path (3 nodes):
  [0] root {plain A=any} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A={ payload: Struct<{}>; success: Void; error: Never; }} {\n    payload: Schema.Struct({}),\n    success: Schema.Void,\n    error: Sch...
      ~> [call] -> [2]
  [2] pipeTransformation {plain A=any} step 0: Schema.RequestClass<ValidSchemaTaggedRequest>("InvalidSchemaTaggedRequest")

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: plain
      result.A: any
      result.E: 
      result.R: 
  [1] kind: pipeSubject
      label: {\n    payload: Schema.Struct({}),\n    success: Schema.Void,\n    error: Sch...
      ordinal: 0
      result.kind: plain
      result.A: { payload: Struct<{}>; success: Void; error: Never; }
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Schema.RequestClass<ValidSchemaTaggedRequest>("InvalidSchemaTaggedRequest")
      ordinal: 0
      result.kind: plain
      result.A: any
      result.E: 
      result.R: 
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call

=== Effect Flow ===
Kind: pipeline
Location: 34:13 - 34:31
Root: Schema.Struct({})
Path (3 nodes):
  [0] root {plain A=Struct<{}>} pipeline
      ==> [subject] -> [1]
  [1] pipeSubject {plain A={}} {}
      ~> [call] -> [2]
  [2] pipeTransformation {plain A=Struct<{}>} step 0: Schema.Struct

Nodes (3):
  [0] kind: root
      label: pipeline
      ordinal: 0
      result.kind: plain
      result.A: Struct<{}>
      result.E: 
      result.R: 
  [1] kind: pipeSubject
      label: {}
      ordinal: 0
      result.kind: plain
      result.A: {}
      result.E: 
      result.R: 
  [2] kind: pipeTransformation
      label: step 0: Schema.Struct
      ordinal: 0
      result.kind: plain
      result.A: Struct<{}>
      result.E: 
      result.R: 
Edges (2):
  0 -> 1 [strong] subject
  1 -> 2 [weak] call
